--- a/public/style.css
+++ b/public/style.css
@@ -14,8 +14,106 @@ body, html{
   border: 1px solid black;
 }
 
-#color-picker {
-  position: relative;
+#color_picker {
+  position: absolute;
+  top: 50px;
+  right: 10px;
+}
+
+#text1 {
+  position: absolute;
+  top: 8px;
+  right: 260px;
+  font-style: oblique;
+  font-family: "Georgia";
+  font-size: 19px;;
+}
+
+#text2 {
+  position: absolute;
+  top: 48px;
+  right: 190px;
+  font-style: oblique;
+  font-family: "Georgia";
+  font-size: 19px;
+}
+
+#username {
+  position: absolute;
+  top: 10px;
+  right: 80px;
+}
+
+
+#submit_username {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  -moz-box-shadow: 0px 10px 14px -7px #f5978e;
+	-webkit-box-shadow: 0px 10px 14px -7px #f5978e;
+	box-shadow: 0px 10px 14px -7px #f5978e;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f24537), color-stop(1, #c62d1f));
+	background:-moz-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:-webkit-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:-o-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:-ms-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:linear-gradient(to bottom, #f24537 5%, #c62d1f 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24537', endColorstr='#c62d1f',GradientType=0);
+	background-color:#f24537;
+	-moz-border-radius:8px;
+	-webkit-border-radius:8px;
+	border-radius:8px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:4px 11px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #810e05;
+}
+#submit_username:hover {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24537));
+	background:-moz-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+	background:-webkit-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+	background:-o-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+	background:-ms-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+	background:linear-gradient(to bottom, #c62d1f 5%, #f24537 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#c62d1f', endColorstr='#f24537',GradientType=0);
+	background-color:#c62d1f;
+}
+#submit_username:active {
+	position: absolute;
+	top: 4px;
+  right: 10px;
+}
+
+
+#myTable {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 20%;
+    position: absolute;
+    top: 90px;
+    right: 10px;
+}
+
+#myTable td, #myTable th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#myTable tr:nth-child(even){background-color: #f2f2f2;}
+
+#myTable tr:hover {background-color: #ddd;}
+
+#myTable th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
 }
 
 * {
@@ -65,4 +163,8 @@ form button {
 
 #messages li:nth-child(odd) {
   background: #eee;
+}
+
+.timer {
+  width: 200px;
 }
