--- a/public/style.css
+++ b/public/style.css
@@ -26,13 +26,19 @@ body, html{
   right: 260px;
   font-style: oblique;
   font-family: "Georgia";
-  font-size: 19px;;
+  font-size: 19px;
 }
 
 #text2 {
   position: absolute;
   top: 48px;
   right: 190px;
+  font-style: oblique;
+  font-family: "Georgia";
+  font-size: 19px;
+}
+
+#text3 {
   font-style: oblique;
   font-family: "Georgia";
   font-size: 19px;
@@ -87,6 +93,63 @@ body, html{
 	position: absolute;
 	top: 4px;
   right: 10px;
+}
+
+.wordButton {
+	-moz-box-shadow:inset 0px 1px 0px 0px #fff6af;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #fff6af;
+	box-shadow:inset 0px 1px 0px 0px #fff6af;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffec64), color-stop(1, #ffab23));
+	background:-moz-linear-gradient(top, #ffec64 5%, #ffab23 100%);
+	background:-webkit-linear-gradient(top, #ffec64 5%, #ffab23 100%);
+	background:-o-linear-gradient(top, #ffec64 5%, #ffab23 100%);
+	background:-ms-linear-gradient(top, #ffec64 5%, #ffab23 100%);
+	background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec64', endColorstr='#ffab23',GradientType=0);
+	background-color:#ffec64;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #ffaa22;
+	display:inline-block;
+	cursor:pointer;
+	color:#333333;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffee66;
+}
+.wordButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffab23), color-stop(1, #ffec64));
+	background:-moz-linear-gradient(top, #ffab23 5%, #ffec64 100%);
+	background:-webkit-linear-gradient(top, #ffab23 5%, #ffec64 100%);
+	background:-o-linear-gradient(top, #ffab23 5%, #ffec64 100%);
+	background:-ms-linear-gradient(top, #ffab23 5%, #ffec64 100%);
+	background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffab23', endColorstr='#ffec64',GradientType=0);
+	background-color:#ffab23;
+}
+.wordButton:active {
+	position:relative;
+	top:1px;
+}
+
+.timer {
+  position: absolute;
+  top: 400px;
+  right: 420px;
+}
+
+#who_is_drawing {
+  position: absolute;
+  top: 520px;
+  right: 520px;
+  font-style: oblique;
+  font-family: "Georgia";
+  font-size: 19px;
+  color: #ff5d00;
 }
 
 
